--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+### Package managers
+# npm
 /node_modules
+package-lock.json
+npm-debug.log*
+# pnp
 /.pnp
 .pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
+# yarn
 yarn-debug.log*
 yarn-error.log*
+
+### Testing
+/coverage
+
+### Production
+/build
+
+### Misc
+# dotenv
+.env.local
+.env.*.local
