--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-config-standard-jsdoc": "^9.3.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
