--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard-jsdoc": "^9.3.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -68,6 +69,8 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
+    "prettier": "^2.7.1",
+    "prettier-config-standard": "^5.0.0",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
@@ -81,6 +84,7 @@
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.10.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^28.0.0",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
