--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # Root .editorconfig file
 root = true
 
-[**]
+[*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
@@ -10,7 +10,11 @@ indent_style = tab
 indent_size = 8
 max_line_length = 96
 
-[**.{md,json,html}]
+[*.{md,json}]
 indent_style = space
 indent_size = 2
 max_line_length = 72
+
+[*.{html,js,jsx,ts,tsx,mjs,cjs}]
+indent_style = space
+indent_size = 2
