--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": [
+    "stylelint-config-recommended",
     "stylelint-config-standard",
+    "stylelint-config-tailwindcss",
     "stylelint-config-prettier"
   ]
 }
