--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-html": "^1.5.0",
     "postcss-loader": "^6.2.1",
+    "postcss-nested": "^5.0.6",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prettier": "^2.7.1",
