--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.56",
-    "@types/react-dom": "^18.0.6",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "babel-jest": "^27.4.2",
@@ -50,55 +50,57 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
-    "dotenv-expand": "^5.1.0",
     "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard-jsdoc": "^9.3.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-webpack-plugin": "^3.1.1",
-    "eslint": "^8.3.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
-    "jest": "^27.4.3",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.4.5",
+    "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-html": "^1.5.0",
     "postcss-loader": "^6.2.1",
     "postcss-nested": "^5.0.6",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
-    "postcss": "^8.4.16",
-    "prettier-config-standard": "^5.0.0",
     "prettier": "^2.7.1",
+    "prettier-config-standard": "^5.0.0",
     "prompts": "^2.4.2",
+    "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-refresh": "^0.11.0",
-    "react": "^18.2.0",
-    "resolve-url-loader": "^4.0.0",
     "resolve": "^1.20.0",
+    "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.10.0",
+    "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^28.0.0",
-    "stylelint": "^14.10.0",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "webpack": "^5.64.4",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "browserslist": {
