--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zhozhna",
   "version": "0.1.0",
-  "description": "Jojest website about jojo from jojofags to jojochads",
+  "description": "Cool frontend for online cinemas",
   "keywords": [
     "website",
     "jojo",
