--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
   "overrides": [
     {
       "files": ["*.{js,jsx}"],
-      "extends": ["standard", "standard-jsdoc", "prettier"]
+      "extends": ["standard", "prettier"]
     },
     {
       "files": ["*.{ts,tsx}"],
@@ -18,7 +18,6 @@
       "extends": [
         "plugin:@typescript-eslint/recommended",
         "standard-with-typescript",
-        "standard-jsdoc/ts",
         "prettier"
       ],
       "parser": "@typescript-eslint/parser",
