--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -13,7 +13,13 @@
     {
       "files": ["**/*.module.css"],
       "rules": {
-        "selector-class-pattern": "^[a-z]\\w+$"
+        "selector-class-pattern": "^[a-z]\\w+$",
+        "value-keyword-case": [
+          "lower",
+          {
+            "ignoreProperties": ["/[cC]omposes/"]
+          }
+        ]
       }
     }
   ]
